# berkeley-cs294-196-f25-gepa

./: .gitignore  README.md  cs194_196_readme.md  gepa_env.yaml  pyproject.toml
data/gepa_results_gemini3_0_100_20251127-211027/: example.err
data/gepa_results_gemini3_0_100_20251127-211027/generated_best_outputs_valset/task_0/: iter_19_prog_8.json  iter_2_prog_2.json  iter_3_prog_3.json  iter_8_prog_5.json
data/gepa_results_gemini3_0_100_20251127-211027/generated_best_outputs_valset/task_1/: iter_19_prog_8.json  iter_1_prog_1.json  iter_2_prog_2.json
data/gepa_results_gemini3_0_100_20251127-211027/generated_best_outputs_valset/task_10/: iter_8_prog_5.json
data/gepa_results_gemini3_0_100_20251127-211027/generated_best_outputs_valset/task_11/: iter_1_prog_1.json  iter_2_prog_2.json  iter_3_prog_3.json  iter_6_prog_4.json  iter_8_prog_5.json
data/gepa_results_gemini3_1_100_20251127-205547/: example.err
data/gepa_results_gemini3_2_100_20251127-205219/: example.err
data/gepa_results_gpt5_0_100_20251128-025034/: example.err
data/gepa_results_gpt5_1_100_20251128-013641/: example.err
data/gepa_results_gpt5_2_100_20251128-024454/: example.err
src/gepa/: __init__.py
src/gepa.egg-info/: PKG-INFO  SOURCES.txt
src/gepa/adapters/multiagent_system_adapter/: example.py  open_evolve_program_adapter.py  open_evolve_proposal_signature.py  pyproject.toml  trace_dataset.py
src/gepa/adapters/multiagent_system_adapter/openevolve/: evaluator.py
src/gepa/utils/: __init__.py  stop_condition.py
(+663 files in other folders)
