[project]
name = "multiagent-system-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "aiohttp>=3.8.0",
    "numpy>=1.22.0",
    "openai>=1.0.0",
    "pydantic>=1.10.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
]
